--- a/set1/sy.html
+++ b/set1/sy.html
@@ -59,7 +59,8 @@
 				<span class="position"><a href="index.html">GeekHub Homepage</a></span>
 				<div class="author-img" style="background-image: url(img/team/sy.png);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Mark Philip M. Sy</a></h1>
-				<span class="position"><a href="index.html">GeekHub</a>.Philip</span>
+				<span class="position"><a href="#">Software Developer</span>
+				<span class="main"><a href="https://tip-markphilipsy.github.io/set1/#team">GEEKHub</a></span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
